...

class BaseData {

  static List<Category> categories() => [
        Category(
          id: 1,
          name: 'خانه',
          subcategories: [
            Subcategory(id: 1, name: 'اجاره'),
            Subcategory(id: 2, name: 'شارژ ساختمان'),
            Subcategory(id: 3, name: 'وسایل منزل'),
          ],
        ),
        Category(
          id: 2,
...
