...
          body: BlocProvider(
            create: (final BuildContext context) =>
                context.read<TransactionCubit>()..fetchTransactions(),
            child: const TransactionListWidget(),
          ),
          floatingActionButton: GestureDetector(
            key: const ValueKey('add_one_transaction'),
            onLongPress: () => context.navToNamed('/add_transaction'),
            child: FloatingActionButton(
              onPressed: () {
                BottomSheetWidget().show(
                  context,
                  S.of(context).add_transaction,
...
